--- a/index.html
+++ b/index.html
@@ -231,20 +231,22 @@
 
         <ul class="list">
             <li>
-                <a href="#">FAQ</a>
+                <a href="#">home</a>
             </li>
             <li>
-                <a href="#">Services</a>
+                <a href="#">About</a>
             </li>
             <li>
-                <a href="#">About Me</a>
+                <a href="#">Skills</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="#">Hobbies</a>
             </li>
             <li>
-                <a href="#">Testimonials</a>
+                <a href="#">Projects</a>
             </li>
+        </li>
+            <a href="#">Contact</a>
         </ul>
         <p class="copyright">
             Bezaleel A. Degillo | All Rights Reserved
