--- a/index.html
+++ b/index.html
@@ -231,22 +231,22 @@
 
         <ul class="list">
             <li>
-                <a href="#">home</a>
+                <a href="#home">home</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="#education">About</a>
             </li>
             <li>
-                <a href="#">Skills</a>
+                <a href="#services">Skills</a>
             </li>
             <li>
-                <a href="#">Hobbies</a>
+                <a href="#testimonials">Hobbies</a>
             </li>
             <li>
-                <a href="#">Projects</a>
+                <a href="#projects">Projects</a>
             </li>
         </li>
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
         </ul>
         <p class="copyright">
             Bezaleel A. Degillo | All Rights Reserved
