--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             <a href="#testimonials">Hobbies</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
+             <div class="menu-icon" id="menu-icon">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
         </nav>
     </header>
 
