--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section class="home" id="Home">
         <div class="home-content">
-            <h1>Hi I'm <span>Beazaleel A. Degillo</span></h1>
+            <h1>Hi I'm <span>Bezaleel A. Degillo</span></h1>
             <h3 class="text-animation">I will be a <span></span></h3>
             <h4>I'm a second year BSIT student</h4>
             <h4></h4>Thankyou for visiting my portfolio</h4>
